--- a/Pages/car-Managment/carDetails.html
+++ b/Pages/car-Managment/carDetails.html
@@ -21,15 +21,16 @@
                     </div>
                 </div>
                 <div class="km-box">
-                    <p>إجمالي الكيلومترات: <span id="total-km">0 KM</span></p>
+                    <p>إجمالي الكيلومترات: <span id="total-km"></span></p>
                 </div>
             </div>
 
             <div class="left-side">
                 <button class="back-btn">⬅ رجوع</button>
                 <div class="actions">
-                    <button class="print-btn">🖨 طباعة</button>
-                    <button class="report-btn">📄 تقرير</button>
+                    <button class="delete-btn">حذف</button>
+                    <!-- <button class="print-btn">🖨 طباعة</button>
+                    <button class="report-btn">📄 تقرير</button> -->
                 </div>
             </div>
         </div>
