--- a/Pages/dash-Boards/hospitalManagerDashboard.html
+++ b/Pages/dash-Boards/hospitalManagerDashboard.html
@@ -53,6 +53,8 @@
         <li onclick="changeContent('cars')">
           <img src="../../Assets/Images/cars.svg" alt="" /> السيارات
         </li>
+        <li onclick="changeContent('drivers')">
+          <img src="../../Assets/Images/users.svg" alt="" /> السائقين
         <li onclick="changeContent('orders')">
           <img src="../../Assets/Images/document.svg" alt="" /> الطلبات
         </li>
