--- a/Pages/driver-Managment/driverDetails.html
+++ b/Pages/driver-Managment/driverDetails.html
@@ -38,8 +38,8 @@
         <div class="left-side">
           <button class="back-btn">⬅ رجوع</button>
           <div class="actions">
-            <button class="print-btn">🖨 طباعة</button>
-            <button class="report-btn">📄 تقرير</button>
+            <!-- <button class="print-btn">🖨 طباعة</button>
+            <button class="report-btn">📄 تقرير</button> -->
             <button class="delete-btn">🗑 حذف</button>
           </div>
         </div>
