Resposive for all pages

--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -133,7 +133,7 @@
           <button onclick="closeJobOrderPopup()">❌</button>
         </div>
         <div style="margin-bottom: 12px; text-align: left">
-          <button class="button" onclick="openAddJobOrderForm()">
+          <button id="jobOrder-Btn" class="button" onclick="openAddJobOrderForm()">
             ➕ إضافة أمر شغل
           </button>
         </div>
