--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>صفحة الطلبات</title>
-    <link rel="icon" type="image/x-icon" href="../Assets/Images/favicon_io/favicon.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../Assets/Images/favicon_io/favicon.ico"
+    />
     <link rel="stylesheet" href="../../Assets/Styles/orderList.css" />
   </head>
   <body>
@@ -47,16 +51,16 @@
         <h2>أنواع الطلبات</h2>
         <p>اختر نوع الطلب الذي تريد إدارته</p>
       </div>
-      
+
       <div class="applications-grid">
-        <div class="application-card" id="purchaseOrder" onclick="">
+        <div class="application-card" id="purchaseOrder">
           <div class="card-icon">🛒</div>
           <h3 class="card-title">إذن الشراء</h3>
           <p class="card-description">إدارة طلبات الشراء والمخازن</p>
-          <div class="card-badge">قريباً</div>
+          <div class="card-badge active">متاح</div>
         </div>
 
-        <div class="application-card" id="payOrder" onclick="">
+        <div class="application-card" id="WithdrawOrder" onclick="">
           <div class="card-icon">💰</div>
           <h3 class="card-title">إذن الصرف</h3>
           <p class="card-description">إدارة طلبات الصرف المالي</p>
@@ -133,7 +137,11 @@
           <button onclick="closeJobOrderPopup()">❌</button>
         </div>
         <div style="margin-bottom: 12px; text-align: left">
-          <button id="jobOrder-Btn" class="button" onclick="openAddJobOrderForm()">
+          <button
+            id="jobOrder-Btn"
+            class="button"
+            onclick="openAddJobOrderForm()"
+          >
             ➕ إضافة أمر شغل
           </button>
         </div>
@@ -146,11 +154,15 @@
       <div class="popup-content job-order-form">
         <div class="form-header">
           <h2>أمر شغل جديد</h2>
-          <button type="button" class="close-btn" onclick="closeAddJobOrderForm()">
+          <button
+            type="button"
+            class="close-btn"
+            onclick="closeAddJobOrderForm()"
+          >
             ✕
           </button>
         </div>
-        
+
         <form id="jobOrderForm" onsubmit="submitJobOrder(event)">
           <!-- Basic Information Section -->
           <div class="form-section">
@@ -187,7 +199,11 @@
               </div>
               <div class="form-group full-width">
                 <label for="applicationDescription">وصف الطلب</label>
-                <textarea id="applicationDescription" required rows="3"></textarea>
+                <textarea
+                  id="applicationDescription"
+                  required
+                  rows="3"
+                ></textarea>
               </div>
               <div class="form-group">
                 <label for="createdByUserID">رقم المستخدم</label>
@@ -264,66 +280,96 @@
             <button class="btn btn-primary" type="submit">
               <span>💾</span> حفظ
             </button>
-            <button class="btn btn-secondary" type="button" onclick="closeAddJobOrderForm()">
+            <button
+              class="btn btn-secondary"
+              type="button"
+              onclick="closeAddJobOrderForm()"
+            >
               <span>❌</span> إلغاء
             </button>
           </div>
         </form>
       </div>
     </div>
-    <!-- Mission Order Popup -->
-    <div id="missionOrderPopup" class="popup hidden">
-      <div class="popup-content" style="width: 90%; max-height: 80vh; overflow-y: auto">
+    <!-- Purchase Order Popup -->
+    <div id="purchaseOrderPopup" class="popup hidden">
+      <div
+        class="popup-content"
+        style="width: 90%; max-height: 80vh; overflow-y: auto"
+      >
         <div class="flex-between">
-          <h2>طلبات المأمورية</h2>
-          <button onclick="closeMissionOrderPopup()">❌</button>
+          <h2>طلبات الشراء</h2>
+          <button onclick="closePurchaseOrderPopup()">❌</button>
         </div>
-        <div id="addMissionSection" style="margin-bottom: 12px; text-align: left; display:none;">
-          <button class="button" onclick="openAddMissionOrderForm()">
-            ➕ إضافة مأمورية
+        <div style="margin-bottom: 12px; text-align: left">
+          <button
+            id="purchaseOrder-Btn"
+            class="button"
+            onclick="openAddPurchaseOrderForm()"
+          >
+            ➕ إضافة طلب شراء
           </button>
         </div>
-        <div id="missionOrdersContainer" class="space-y-2"></div>
+        <div id="purchaseOrdersContainer" class="space-y-2"></div>
       </div>
     </div>
 
-    <!-- Add/Edit Mission Order Form -->
-    <div id="addMissionOrderPopup" class="popup hidden">
+    <!-- Add/Edit Purchase Order Form -->
+    <div id="addPurchaseOrderPopup" class="popup hidden">
       <div class="popup-content job-order-form">
         <div class="form-header">
-          <h2>مأمورية جديدة</h2>
-          <button type="button" class="close-btn" onclick="closeAddMissionOrderForm()">
+          <h2>طلب شراء جديد</h2>
+          <button
+            type="button"
+            class="close-btn"
+            onclick="closeAddPurchaseOrderForm()"
+          >
             ✕
           </button>
         </div>
-        <form id="missionOrderForm" onsubmit="submitMissionOrder(event)">
+        <form id="purchaseOrderForm" onsubmit="submitPurchaseOrder(event)">
           <div class="form-section">
-            <h3 class="section-title">معلومات أساسية</h3>
+            <h3 class="section-title">معلومات الطلب</h3>
             <div class="form-grid">
               <div class="form-group">
-                <label for="distination">الوجهة</label>
-                <input type="text" id="distination" required />
+                <label for="purchaseOrderType">نوع الطلب</label>
+                <select
+                  id="purchaseOrderType"
+                  required
+                  onchange="togglePurchaseType()"
+                >
+                  <option value="">اختر نوع الطلب</option>
+                  <option value="spare">قطع غيار</option>
+                  <option value="consumable">مستهلكات</option>
+                </select>
+              </div>
+              <div
+                class="form-group"
+                id="sparePartsGroup"
+                style="display: none"
+              >
+                <label for="sparePartSelect">اختر قطعة الغيار</label>
+                <select id="sparePartSelect"></select>
+              </div>
+              <div
+                class="form-group"
+                id="consumableGroup"
+                style="display: none"
+              >
+                <label for="consumableSelect">اختر المستهلك</label>
+                <select id="consumableSelect"></select>
               </div>
               <div class="form-group">
-                <label for="createdByUser">أنشئت بواسطة</label>
-                <input type="text" id="createdByUser" />
+                <label for="requiredQuantity">الكمية المطلوبة</label>
+                <input type="number" id="requiredQuantity" required min="1" />
               </div>
               <div class="form-group">
-                <label for="missionNoteId">ملاحظة مرتبطة</label>
-                <select id="missionNoteId" required></select>
-              </div>
-            </div>
-          </div>
-          <div class="form-section">
-            <h3 class="section-title">التوقيت</h3>
-            <div class="form-grid">
-              <div class="form-group">
-                <label for="missionStartDate">تاريخ البداية</label>
-                <input type="datetime-local" id="missionStartDate" required />
-              </div>
-              <div class="form-group">
-                <label for="missionEndDate">تاريخ النهاية</label>
-                <input type="datetime-local" id="missionEndDate" required />
+                <label for="purchaseOrderDescription">الوصف</label>
+                <textarea
+                  id="purchaseOrderDescription"
+                  required
+                  rows="2"
+                ></textarea>
               </div>
             </div>
           </div>
@@ -331,66 +377,15 @@
             <button class="btn btn-primary" type="submit">
               <span>💾</span> حفظ
             </button>
-            <button class="btn btn-secondary" type="button" onclick="closeAddMissionOrderForm()">
+            <button
+              class="btn btn-secondary"
+              type="button"
+              onclick="closeAddPurchaseOrderForm()"
+            >
               <span>❌</span> إلغاء
             </button>
           </div>
         </form>
-      </div>
-    </div>
-
-    <!-- Mission Notes Popup -->
-    <div id="missionNotePopup" class="popup hidden">
-      <div class="popup-content" style="width: 90%; max-height: 80vh; overflow-y: auto">
-        <div class="flex-between">
-          <h2>طلبات المأمورية</h2>
-          <button onclick="closeMissionNotePopup()">❌</button>
-        </div>
-        <div id="addMissionNoteSection" style="margin-bottom: 12px; text-align: left; display:none;">
-          <button class="button" onclick="openAddMissionNoteForm()">
-            ➕ إرسال مذكرة مأمورية
-          </button>
-        </div>
-        <div id="missionNotesContainer" class="space-y-2"></div>
-      </div>
-    </div>
-
-    <!-- Add Mission Note Form Popup -->
-    <div id="addMissionNotePopup" class="popup hidden">
-      <div class="popup-content job-order-form">
-        <div class="form-header">
-          <h2>إرسال مذكرة مأمورية</h2>
-          <button type="button" class="close-btn" onclick="closeAddMissionNoteForm()">
-            ✕
-          </button>
-        </div>
-        <form id="missionNoteForm" onsubmit="submitMissionNote(event)">
-          <div class="form-section">
-            <div class="form-group">
-              <label for="missionNoteDescription">وصف مذكرة</label>
-              <textarea id="missionNoteDescription" required></textarea>
-            </div>
-          </div>
-          <div class="form-actions">
-            <button class="btn btn-primary" type="submit">
-              <span>💾</span> إرسال
-            </button>
-            <button class="btn btn-secondary" type="button" onclick="closeAddMissionNoteForm()">
-              <span>❌</span> إلغاء
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <!-- Mission Details Popup -->
-    <div id="missionDetailsPopup" class="popup hidden">
-      <div class="popup-content" style="width: 90%; max-height: 80vh; overflow-y: auto">
-        <div class="flex-between">
-          <h2>تفاصيل المأمورية</h2>
-          <button onclick="closeMissionDetailsPopup()">❌</button>
-        </div>
-        <div id="missionDetailsContainer"></div>
       </div>
     </div>
     <script src="../../Java script/orderList.js"></script>
